update savedjob appliedhistory